--- a/templates/footer1.html
+++ b/templates/footer1.html
@@ -1,21 +1,17 @@
 
-<!-- <footer class="bg-secondary text-white pt-5 pb-4 footer-1"> -->
 <footer1 class="bg-secondary text-white footer-1">
     <div class="bg-secondary  text-md-left">
         <div class="row text-md-left">
-            <!-- <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Company</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        
-            </div> -->
-
+            
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Product</h5>
 
-                {% for item in categories %}
-                <p>
-                    <a href="#" class="text-white" style="text-decoration: none;">{{item.category_name}}</a>
-                </p>
+                {% for category in categories %}
+                {% if category.category_name == 'รองเท้า'%}
+                <p><a class="text-white" style="text-decoration: none;" href="{% url 'shoes' %}">{{category.category_name}}</a></p>
+                {% else %}
+                <p><a class="text-white" style="text-decoration: none;" href="{% url 'bags' %}">{{category.category_name}}</a></p>
+                {% endif %}
                 {% endfor %}
                 
             </div>
@@ -55,10 +51,7 @@
                 <p>
                     <i class="fas fa-phone mr-3"></i> +01 234 567 89
                 </p>
-                <!-- <p>
-                    <i class="fas fa-print mr-3"></i> +02 222 223 33
-                </p> -->
-
+               
             </div>
 
         </div>
