--- a/templates/carousel.html
+++ b/templates/carousel.html
@@ -7,8 +7,8 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-
-    <div class="carousel-inner w-100">
+    <!-- <br><br><br> -->
+    <div class="carousel-inner w-100 pt-5">
       <div class="carousel-item active">
         <img src="{% static 'shopping_web/slide1.png' %}" class='w-100' style="height:400px;" alt="Slide 1">       
       </div>
