--- a/templates/login.html
+++ b/templates/login.html
@@ -3,135 +3,56 @@
 
 {% block content %}
 
-{% comment %}
-<div class="d-flex justify-content-center p-5">
-    <form>
-        <!-- Email input -->
-        <div class="form-outline mb-4">
-            <h1 class="text-center pb-3">เข้าสู่ระบบ</h1>
-            <input type="email" id="form2Example1" class="form-control" />
-            <label class="form-label" for="form2Example1">Email address</label>
-        </div>
-      
-        <!-- Password input -->
-        <div class="form-outline mb-4">
-            <input type="password" id="form2Example2" class="form-control" />
-            <label class="form-label" for="form2Example2">Password</label>
-        </div>
-      
-        <!-- 2 column grid layout for inline styling -->
-        <div class="row mb-4">
-          <div class="col d-flex justify-content-center">
-            <!-- Checkbox -->
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-              <label class="form-check-label" for="form2Example31"> Remember me </label>
-            </div>
-          </div>
-      
-          <div class="col">
-            <!-- Simple link -->
-            <a href="#!">Forgot password?</a>
-          </div>
-        </div>
-      
-        <!-- Submit button -->
-        <div class="row mb-4">
-            <button type="button" class="btn btn-primary btn-block ">Sign in</button>
-        </div>
-
-        <div class="text-center">
-          <p>Not a member? <a href="{% url 'register' %}">Register</a></p>
-        </div>
-
-
-        <!-- Register buttons -->
-        <!-- <div class="text-center">
-          <p>Not a member? <a href="#!">Register</a></p>
-          <p>or sign up with:</p>
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-facebook-f"></i>
-          </button>
-      
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-google"></i>
-          </button>
-      
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-twitter"></i>
-          </button>
-      
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-github"></i>
-          </button>
-        </div> -->
-    </form>
-
-</div>
-{% endcomment %}
-
+<br><br><br><br>
 <div class="d-flex justify-content-center  pt-5">
   <div class="card mx-4 mx-md-5 shadow-5-strong w-50" style="
-            background: hsla(0, 0%, 100%, 0.8);
-            backdrop-filter: blur(30px);">
-            <div class="card-body py-5 px-md-5">
+      background: hsla(0, 0%, 100%, 0.8);
+      backdrop-filter: blur(30px);">
+      <div class="card-body py-5 px-md-5">
 
-              
-              <form action="{% url 'login' %}" method="post">
-                {% csrf_token %}
-                <!-- Email input -->
-                <div class="form-outline mb-4">
-                    <h1 class="text-center pb-3">เข้าสู่ระบบ</h1>
-
-                    <p class="text-danger">{{error_message}}</p>
-
-                    <input type="email" id="email" class="form-control" placeholder="Email address" name="email" value="{{email}}"/>                    
-                    <!-- <label class="form-label" for="form2Example1">Email address</label> -->
-                </div>
-              
-                <!-- Password input -->
-                <div class="form-outline mb-4">
-                    <input type="password" id="password" class="form-control" placeholder="Password" name="password" />
-                    <!-- <label class="form-label" for="form2Example2">Password</label> -->
-                </div>
-              
-                <!-- 2 column grid layout for inline styling -->
-                <div class="row mb-4">
-                  <div class="col d-flex justify-content-center">
-                    <!-- Checkbox -->
-                    <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-                      <label class="form-check-label" for="form2Example31"> Remember me </label>
-                    </div>
-                  </div>
-              
-                  <div class="col">
-                    <!-- Simple link -->
-                    <a href="#!">Forgot password?</a>
-                  </div>
-                </div>
-              
-                <!-- Submit button -->
-                <div class="row mb-4">
-                    <button type="submit" class="btn btn-primary btn-block " >Sign in</button>
-                </div>
         
-                <div class="text-center">
-                  <p>Not a member? <a href="{% url 'register' %}">Register</a></p>
-                </div>
+        <form action="{% url 'login' %}" method="post">
+          {% csrf_token %}
+          <div class="form-outline mb-4">
+              <h1 class="text-center pb-3">Sign in</h1>
+
+              <p class="text-danger">{{error_message}}</p>
+
+              <input type="email" id="email" class="form-control" placeholder="Email address" name="email" value="{{email}}"/>                    
+          </div>
+        
+          <!-- Password input -->
+          <div class="form-outline mb-4">
+              <input type="password" id="password" class="form-control" placeholder="Password" name="password" />
+          </div>
+        
+          <!-- 2 column grid layout for inline styling -->
+          <div class="row mb-4">
+            <div class="col d-flex justify-content-center">
+              <!-- Checkbox -->
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+                <label class="form-check-label" for="form2Example31"> Remember me </label>
+              </div>
             </div>
-          </form>
+        
+            <div class="col">
+              <!-- Simple link -->
+              <a href="#!">Forgot password?</a>
+            </div>
+          </div>
+        
+          <!-- Submit button -->
+          <div class="row mb-4">
+              <button type="submit" class="btn btn-primary btn-block " >Sign in</button>
+          </div>
+  
+          <div class="text-center">
+            <p>Not a member? <a href="{% url 'register' %}">Register</a></p>
+          </div>
+      </div>
+    </form>
 </div>  
-
-
 </div>
-
-
-
-
-
-{% comment %}
-{% include 'footer1.html' %}
-{% endcomment %}
 
 {% endblock %}
